fix: don't add dependency to micrometer
We don't need to add this dependency, we can easily do the check ourselves.